--- a/TeduShop.Model/TeduShop.Model.csproj
+++ b/TeduShop.Model/TeduShop.Model.csproj
@@ -57,14 +57,14 @@
     <Compile Include="Models\PostCategory.cs" />
     <Compile Include="Models\PostTag.cs" />
     <Compile Include="Models\ProductCategory.cs" />
-    <Compile Include="Models\Footers.cs" />
+    <Compile Include="Models\Footer.cs" />
     <Compile Include="Models\Menu.cs" />
     <Compile Include="Models\MenuGroup.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductTag.cs" />
     <Compile Include="Models\Slide.cs" />
     <Compile Include="Models\SuportOnline.cs" />
-    <Compile Include="Models\SytemConfigs.cs" />
+    <Compile Include="Models\SytemConfig.cs" />
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Models\VisitorStatistic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
